<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:backgroundTint="@color/colorTransparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_user_detail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/icon_avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_username_detail"
                    style="@style/textViewStyle"
                    android:layout_marginTop="10dp"
                    android:text="@string/username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/civ_user_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/container_name_detail"
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_username_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_location_detail"
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/container_name_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/container_location_detail"
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_location_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_repository_detail"
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/repository"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/container_location_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/container_repository_detail"
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/repository"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_repository_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_company_detail"
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/company"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/container_repository_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/container_company_detail"
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/company"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_company_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_followers_detail"
                    style="@style/textViewStyle"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/follower"
                    app:layout_constraintEnd_toStartOf="@+id/tv_following_detail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/container_company_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/container_followers_detail"
                    style="@style/textViewStyle"
                    android:layout_marginTop="8dp"
                    android:text="@string/follower_number"
                    app:layout_constraintEnd_toEndOf="@+id/tv_followers_detail"
                    app:layout_constraintStart_toStartOf="@+id/tv_followers_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_followers_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_following_detail"
                    style="@style/textViewStyle"
                    android:text="@string/following"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_followers_detail"
                    app:layout_constraintTop_toBottomOf="@+id/container_company_detail"
                    app:layout_constraintTop_toTopOf="@+id/tv_followers_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/container_following_detail"
                    style="@style/textViewStyle"
                    android:layout_marginTop="4dp"
                    android:text="@string/following_number"
                    app:layout_constraintEnd_toEndOf="@+id/tv_following_detail"
                    app:layout_constraintStart_toStartOf="@+id/tv_following_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_following_detail"/>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/gp_no_list_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="iv_no_list_user, tv_no_list_user, btn_try_user"/>

                <ImageView
                    android:id="@+id/iv_no_list_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/not_loaded_list_user"
                    android:src="@drawable/ic_github"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_no_list_user"
                    style="@style/textViewStyle"
                    android:layout_marginTop="16dp"
                    android:text="@string/maaf_coba_ulang_lagi"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_no_list_user"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_try_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorWhite"
                    android:text="@string/coba_lagi"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_no_list_user"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="bottom"
                app:tabSelectedTextColor="@color/colorPrimaryDark"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorTransparent"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            <ImageButton
                android:id="@+id/btn_back_detail_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorTransparent"
                android:contentDescription="@string/button_back"
                android:src="@drawable/ic_baseline_arrow_back_24"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_detail_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorSecondaryLight"
        android:enabled="false"
        android:contentDescription="@string/favorite_user"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:tint="@color/colorFavorite"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>