<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FollowersFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_followers_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_row_user"/>

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_no_list_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_no_list_user_followers, tv_no_list_user_followers, btn_try_followers"/>

    <ImageView
        android:id="@+id/iv_no_list_user_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/if_list_no_loaded"
        android:src="@drawable/ic_github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_list_user_followers"
        style="@style/textViewStyle"
        android:layout_marginTop="16dp"
        android:text="@string/maaf_coba_ulang_lagi"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_list_user_followers"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_try_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/coba_lagi"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_list_user_followers"/>

</androidx.constraintlayout.widget.ConstraintLayout>