<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/cari_username"
        android:padding="10dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_search_white_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/colorTransparent"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintBottom_toBottomOf="@+id/searchField"
        app:layout_constraintEnd_toStartOf="@+id/btn_setting"
        app:layout_constraintStart_toEndOf="@+id/searchField"
        app:layout_constraintTop_toTopOf="@+id/searchField"/>

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/colorTransparent"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="@+id/searchField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_favorite"
        app:layout_constraintTop_toTopOf="@+id/searchField"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchField"
        tools:listitem="@layout/item_row_user"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchField"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_no_list_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_no_list_user, tv_no_list_user, btn_try"/>

    <ImageView
        android:id="@+id/iv_no_list_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchField"
        app:layout_constraintVertical_bias="0.3"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_list_user"
        style="@style/textViewStyle"
        android:layout_marginTop="16dp"
        android:text="@string/maaf_coba_ulang_lagi"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_list_user"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/coba_lagi"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_list_user"/>

</androidx.constraintlayout.widget.ConstraintLayout>